--- a/onepager-web/src/i18n/locales/de.json
+++ b/onepager-web/src/i18n/locales/de.json
@@ -53,5 +53,46 @@
     "cancel": "Abbrechen",
     "applyCrop": "Zuschnitt anwenden",
     "cropping": "Wird zugeschnitten..."
+  },
+  "import": {
+    "title": "OnePager importieren",
+    "searchEmployees": "Mitarbeiter suchen",
+    "employeeName": "Mitarbeitername",
+    "searchPlaceholder": "Eingeben um Mitarbeiter zu suchen...",
+    "search": "Suchen",
+    "searching": "Suche läuft...",
+    "searchResults": "Suchergebnisse",
+    "searchTooShort": "Bitte mindestens 3 Zeichen eingeben",
+    "noEmployeesFound": "Keine Mitarbeiter gefunden",
+    "searchError": "Fehler bei der Mitarbeitersuche",
+    "selectOnePager": "OnePager auswählen",
+    "noOnePagersFound": "Keine OnePager für diesen Mitarbeiter gefunden",
+    "loadOnePagersError": "Fehler beim Laden der OnePager",
+    "preview": "Vorschau",
+    "loadDataError": "Fehler beim Laden der OnePager-Daten",
+    "employeeInfo": "Mitarbeiterinformationen",
+    "name": "Name",
+    "position": "Position",
+    "fileName": "Dateiname",
+    "photo": "Foto",
+    "employeePhoto": "Mitarbeiterfoto",
+    "importNote": "Hinweis: Derzeit können nur Grundinformationen (Name, Position, Foto) importiert werden. Die vollständige OnePager-Importfunktion wird in zukünftigen Versionen verfügbar sein.",
+    "back": "Zurück",
+    "cancel": "Abbrechen",
+    "importButton": "Importieren",
+    "loading": "Lade..."
+  },
+  "runtimeConfig": {
+    "title": "Laufzeit-API-Konfiguration",
+    "description": "Diese Einstellungen werden im localStorage Ihres Browsers gespeichert und überschreiben Build-Zeit-Einstellungen. Sie sind nützlich für Entwicklung, Tests oder bei der Verwendung Ihrer eigenen Azure Functions.",
+    "customApiUrl": "Benutzerdefinierte API-Basis-URL (optional)",
+    "customApiUrlPlaceholder": "https://ihre-functions-app.azurewebsites.net",
+    "customApiUrlHelp": "Leer lassen, um die zur Build-Zeit konfigurierte URL zu verwenden",
+    "functionsKey": "Azure Functions Schlüssel (optional)",
+    "functionsKeyPlaceholder": "Ihr Azure Functions Zugriffsschlüssel",
+    "functionsKeyHelp": "Wird verwendet, wenn Azure Functions Authentifizierung erfordern",
+    "saveConfiguration": "Konfiguration speichern",
+    "clearAll": "Alles löschen",
+    "debugInformation": "Debug-Informationen"
   }
 }
