--- a/onepager-web/src/i18n/locales/en.json
+++ b/onepager-web/src/i18n/locales/en.json
@@ -53,5 +53,46 @@
     "cancel": "Cancel",
     "applyCrop": "Apply Crop",
     "cropping": "Cropping..."
+  },
+  "import": {
+    "title": "Import OnePager",
+    "searchEmployees": "Search Employees",
+    "employeeName": "Employee Name",
+    "searchPlaceholder": "Type to search employees...",
+    "search": "Search",
+    "searching": "Searching...",
+    "searchResults": "Search Results",
+    "searchTooShort": "Please enter at least 3 characters to search",
+    "noEmployeesFound": "No employees found",
+    "searchError": "Error searching employees",
+    "selectOnePager": "Select OnePager",
+    "noOnePagersFound": "No OnePagers found for this employee",
+    "loadOnePagersError": "Error loading OnePagers",
+    "preview": "Preview",
+    "loadDataError": "Error loading OnePager data",
+    "employeeInfo": "Employee Information",
+    "name": "Name",
+    "position": "Position",
+    "fileName": "File Name",
+    "photo": "Photo",
+    "employeePhoto": "Employee Photo",
+    "importNote": "Note: Currently only basic information (name, position, photo) can be imported. Full OnePager import functionality will be available in future versions.",
+    "back": "Back",
+    "cancel": "Cancel",
+    "importButton": "Import",
+    "loading": "Loading..."
+  },
+  "runtimeConfig": {
+    "title": "Runtime API Configuration",
+    "description": "These settings are stored in your browser's localStorage and override build-time settings. They're useful for development, testing, or when using your own Azure Functions.",
+    "customApiUrl": "Custom API Base URL (optional)",
+    "customApiUrlPlaceholder": "https://your-functions-app.azurewebsites.net",
+    "customApiUrlHelp": "Leave empty to use the build-time configured URL",
+    "functionsKey": "Azure Functions Key (optional)",
+    "functionsKeyPlaceholder": "Your Azure Functions access key",
+    "functionsKeyHelp": "Used when Azure Functions require authentication",
+    "saveConfiguration": "Save Configuration",
+    "clearAll": "Clear All",
+    "debugInformation": "Debug Information"
   }
 }
